--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.1",
     "jquery": "^3.4.1",
